fix: mobile search improvements and brighter texts in dark mode

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -182,6 +182,14 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    #main {
+        &:has(.search_box_view-input:focus) .navBar {
+            display: none !important;
+        }
+    }
+  }
+
 .btc-search { 
     .sui-layout-sidebar-toggle {
         display: none;
